--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-status-bar-height": "^2.5.0",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "react-native-gesture-handler": "~1.6.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.8.6",
     "babel-preset-expo": "~8.1.0",
-    "@babel/core": "^7.8.6"
+    "expo-constants": "^9.0.0"
   },
   "private": true
 }
